backup-gmail 2012-1-17
  * fix: RestoreGmail works around imaplib's Time2InternalDate function to 
    avoid sending non-RFC2822 dates to IMAP

backup-gmail 2012-1-14
  * fix: use BODY.PEEK to effect --keep_status instead of manually unsetting
    \Seen. This fixes the behavior and is no longer a slow operation
  * method fetchRFC822Info(...) fetches MESSAGE-ID also, so a separate call
    to fetchMessageId(...) is not required
  
backup-gmail 2012-1-11.1
  * fix: also UTF-7 decode special folders

backup-gmail 2012-1-11
  * restore treats 'INBOX' as a special name even for non-English accounts
  * improve help string

backup-gmail 2012-1-10.1
  * improve help strings and gui labels

backup-gmail 2012-1-10
  * fix: restore can assign non-ASCII labels via UTF-7
  * restore by default restores to \AllMail; can restore to specified --label
  * restore no longer puts anything into \Inbox (unless explicit with --label)
  * remove redundant clearing of \Seen in backup if --keep_read_status

backup-gmail 2011-11-2
  * fix localized date handling for gui.py and command-line arguments of
    backup_gmail.py
  * fix gui.py to interact with backup_gmail strictly in utf-8
  * use imapUTF7 package to handle mailbox names with non-ASCII characters;
    (thanks to MXM at http://mxm-mad-science.blogspot.com/)

backup-gmail 2011-10-16-1
  * Since users can hide special folders in IMAP, treat them as
    optional to avoid KeyError
    
backup-gmail 0.2
  * Full and incremental backup are now the same operation, and re-running
	any backup will only write newly-detected messages ('label' is still
	always written fully after each backup). backup-gmail no longer deletes
	any data
  * add KeyringUtil to use keyring library (if available at runtime)
	for secure handling of saved passwords instead of writing plaintext
	to .cfg files. Existing password settings in .cfg files will be used 
	but will not be automatically written anymore.